--- a/src/components/ModalMenu/styles.module.scss
+++ b/src/components/ModalMenu/styles.module.scss
@@ -13,8 +13,13 @@
             align-items: center;
             flex-direction: column;
 
-            &:last-child {
-                display: flex;
+            .imageAvatarWrapper {
+                position: absolute;
+                left: 0;
+            }
+
+            .aboutWrapper {
+                margin-left: 3.3rem;
             }
 
             h2 {
@@ -48,6 +53,9 @@
             flex-direction: column;
 
             button {
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
                 margin-bottom: 0.5rem;
                 font-weight: 600 !important;
                 height: 2.3rem;
