adding functionality to the create task button

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,9 +7,12 @@ body {
 
 :root {
   --black-10: rgba(0, 0, 0, 0.1);
+  --black-30: rgba(0, 0, 0, 0.3);
+  --black-60: rgba(0, 0, 0, 0.6);
   --black-100: #000;
 
   --blue: #0047ff;
+  --blue-25: #386db3;
   --blue-50: #0039cc;
 
   --white: #fff;
