adding modal options and styling it

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ body {
 :root {
   --black-10: rgba(0, 0, 0, 0.1);
   --black-30: rgba(0, 0, 0, 0.3);
+  --black-40: rgba(0, 0, 0, 0.4);
   --black-60: rgba(0, 0, 0, 0.6);
   --black-100: #000;
 
