--- a/src/components/EditTaskButton/styles.module.scss
+++ b/src/components/EditTaskButton/styles.module.scss
@@ -5,4 +5,8 @@
     background: transparent;
     border: none;
     outline: none;
+
+    .imageDotsWrapper {
+        position: relative;
+    }
 }
