styling layout for screen  1366x728

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -6,3 +6,10 @@
         right: 1rem;
     }
 }
+
+@media screen and (min-width: 1366px) {
+    .footerContainer {
+        width: 583px;
+        margin-left: 2.3rem;
+    }
+}
