--- a/src/components/ModalOptions/style.module.scss
+++ b/src/components/ModalOptions/style.module.scss
@@ -2,17 +2,18 @@
     background: var(--black-30);
     backdrop-filter: blur(2px);
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modalOptions {
-    position: absolute;
-    top: 17rem;
-    right: 2rem;
     height: 6rem;
     width: 12rem;
     border-radius: 5px;
