--- a/src/components/Body/styles.module.scss
+++ b/src/components/Body/styles.module.scss
@@ -13,3 +13,25 @@
         padding: 0 1rem;
     }
 }
+
+@media screen and (min-width: 1366px) {
+    .bodyContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        h1 {
+            margin-right: 30rem;
+            padding-top: 10rem;
+            margin-bottom: 2rem;
+        }
+
+        .bodyContent {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+    }
+}
