--- a/src/components/MenuButton/styles.module.scss
+++ b/src/components/MenuButton/styles.module.scss
@@ -5,3 +5,9 @@
     padding: 0;
     cursor: pointer;
 }
+
+@media screen and (min-width: 1366px) {
+    .menuButton {
+        display: none;
+    }
+}
