--- a/src/components/ModalMenu/styles.module.scss
+++ b/src/components/ModalMenu/styles.module.scss
@@ -22,7 +22,7 @@
     height: 100%;
     background: var(--blue);
     color: var(--white);
-    width: 50%;
+    width: 192px;
 
     animation: appear 800ms;
     animation-timing-function: ease;
