--- a/src/components/Task/styles.module.scss
+++ b/src/components/Task/styles.module.scss
@@ -13,7 +13,6 @@
 
     h2 {
         white-space: nowrap;
-        height: 21px;
         width: 49px;
         top: 0;
         position: absolute;
@@ -39,12 +38,19 @@
             font-weight: 700 !important;
             font-size: 0.8rem;
             height: 2rem;
-            width: 6.5rem;
+            width: 8rem;
 
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding-left: 0.2rem;
         }
+    }
+}
+
+@media screen and (min-width: 1366px) {
+    .tasksContainer {
+        height: 146px;
+        width: 583px;
     }
 }
