--- a/src/components/Body/styles.module.scss
+++ b/src/components/Body/styles.module.scss
@@ -20,10 +20,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        height: 100%;
 
         h1 {
             margin-right: 30rem;
-            padding-top: 10rem;
             margin-bottom: 2rem;
         }
 
