solving bug when editing a task

--- a/src/components/ModalCreateTask/style.module.scss
+++ b/src/components/ModalCreateTask/style.module.scss
@@ -86,3 +86,10 @@
         }
     }
 }
+
+@media screen and (min-width: 1366px) {
+    .modalCreateTask {
+        height: 294px;
+        width: 315px;
+    }
+}
