--- a/src/components/ModalEditTask/styles.module.scss
+++ b/src/components/ModalEditTask/styles.module.scss
@@ -109,3 +109,10 @@
         }
     }
 }
+
+@media screen and (min-width: 1366px) {
+    .modalEditTask {
+        height: 367px;
+        width: 315px;
+    }
+}
