--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -65,6 +65,14 @@
             justify-content: center;
             width: 600px;
             margin-right: 4rem;
+
+            input {
+                font-size: 1.3rem;
+
+                &::placeholder {
+                    font-size: 1.3rem;
+                }
+            }
         }
     }
 }
